--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a class="nav-link scrollto" href="#">About</a></li>
           <li><a class="nav-link scrollto" href="#">Services</a></li>
           <li><a class="nav-link scrollto " href="#">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#">Contact</a></li>
+          <li class="scroll-to-section"><div class="main-red-button"><a href="#">Contact Now</a></div></li> 
         </ul>
       </nav>
     </div>
@@ -32,6 +32,9 @@
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
           <h3>We Create Content that rank</h3>
+          <div class="d-flex">
+            <a href="#" class="btn-get-started scrollto">SEE OUR WORK</a>
+          </div>
         </div>
         <div class="img">
           <img src="img/Group.png" class="img-fluid" alt="">
