--- a/index.html
+++ b/index.html
@@ -69,13 +69,78 @@
           <span></span>
           <div class="row"></div>
         </section>
-        <section class="work text-center">
+        <section class="work text-center container">
           <h2>Our Work</h2>
           <span></span>
-          <div class="row"></div>
+          <div class="row row-cols-1 text-white mt-5">
+            <div class="col row my-4">
+              <div class="col"><img src="img/Bitmap.png" alt="" class="img-fluid" /></div>
+              <div class="col text-start">
+                <h4>Brand Name</h4>
+                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.
+                </p>
+              </div>
+            </div>
+            <div class="col row my-4">
+              <div class="col text-end">
+                <h4>Brand Name</h4>
+                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.
+                </p>
+              </div>
+              <div class="col"><img src="img/Bitmap Copy.png" alt="" class="img-fluid" /></div>
+            </div>
+            <div class="col row my-4">
+              <div class="col"><img src="img/Bitmap Copy 2.png" alt="" class="img-fluid" /></div>
+              <div class="col text-start">
+                <h4>Brand Name</h4>
+                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.
+                </p>
+              </div>
+            </div>
+            <div class="col row my-4">
+              <div class="col text-end">
+                <h4>Brand Name</h4>
+                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat.
+                </p>
+              </div>
+              <div class="col"><img src="img/Bitmap Copy 3.png" alt="" class="img-fluid" /></div>
+            </div>
+          </div>
+          <a class="my-4" href="">SEE ALL WORK</a>
         </section>
       </section>
+
+      <!-- ======= Contact Us======= -->
+      <section class="contact-us">
+        <div class="container">
+          <div class="container-fluid row"></div>
+          <div class="col">
+            <h2>Questions, Comments, Concerns?</h2>
+            <h1>We’d love to <span class="custom">hear</span> from you!</h1>
+          </div>
+          <div class="col"></div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="container-fluid bg-black text-white">
+        <div class="container">
+          <p class="m-0">2020 © All rights reserved by Your company name</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
