--- a/index.html
+++ b/index.html
@@ -125,12 +125,23 @@
       <!-- ======= Contact Us======= -->
       <section class="contact-us">
         <div class="container">
-          <div class="container-fluid row"></div>
-          <div class="col">
-            <h2>Questions, Comments, Concerns?</h2>
-            <h1>We’d love to <span class="custom">hear</span> from you!</h1>
+          <div class="container-fluid row">
+            <div class="col">
+              <h2>Questions, Comments, Concerns?</h2>
+              <h1>We’d love to <span class="custom">hear</span> from you!</h1>
+            </div>
+            <div class="col">
+              <form action="" method="POST">
+                <label for="email" class="d-block">Your Email Address</label>
+                <input type="email" name="email" class="custom" /><br />
+                <label for="subject" class="d-block">Subject</label>
+                <input type="text" name="subject" class="custom" /><br />
+                <label for="message" class="d-block">Message</label>
+                <textarea type="text" name="message" rows="5" class="custom"></textarea>
+                <button type="submit">Kirim</button>
+              </form>
+            </div>
           </div>
-          <div class="col"></div>
         </div>
       </section>
     </main>
