--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
 
       <!-- ======= Contact Us======= -->
       <section class="contact-us">
-        <div class="container">
+        <div class="container my-5 py-5">
           <div class="container-fluid row">
             <div class="col">
-              <h2>Questions, Comments, Concerns?</h2>
-              <h1>We’d love to <span class="custom">hear</span> from you!</h1>
+              <h2 class="text-1">Questions, Comments, Concerns?</h2>
+              <h1 class="text-2">We’d love to <span class="custom">hear</span> from you!</h1>
             </div>
             <div class="col">
               <form action="" method="POST">
@@ -137,8 +137,8 @@
                 <label for="subject" class="d-block">Subject</label>
                 <input type="text" name="subject" class="custom" /><br />
                 <label for="message" class="d-block">Message</label>
-                <textarea type="text" name="message" rows="5" class="custom"></textarea>
-                <button type="submit">Kirim</button>
+                <textarea type="text" name="message" rows="5" class="custom area"></textarea>
+                <button type="submit" class="custom-btn">Send A Message</button>
               </form>
             </div>
           </div>
