--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
               <h1 class="text-2">We’d love to <span class="custom">hear</span> from you!</h1>
             </div>
             <div class="col">
-              <form action="" method="POST">
+              <form action="https://formspree.io/f/xzbwlrgv" method="POST">
                 <label for="email" class="d-block">Your Email Address</label>
                 <input type="email" name="email" class="custom" /><br />
                 <label for="subject" class="d-block">Subject</label>
                 <input type="text" name="subject" class="custom" /><br />
                 <label for="message" class="d-block">Message</label>
                 <textarea type="text" name="message" rows="5" class="custom area"></textarea>
-                <button type="submit" class="custom-btn">Send A Message</button>
+                <button type="submit" class="custom-btn">Send a Message</button>
               </form>
             </div>
           </div>
