--- a/index.html
+++ b/index.html
@@ -67,7 +67,61 @@
         <section class="valuable-services text-center">
           <h2>Our Valuable Services</h2>
           <span></span>
-          <div class="row"></div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-lg-4">
+                            <div class="card first">
+                              <div class="card-body">
+                                <img src="img/Bitmap1.png" class="d-block w-100" alt="...">
+                                <h6>App Development</h6>
+                                <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <a href="#">READ MORE</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-lg-4">
+                            <img src="img/Bitmap Copy 2.png" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="col-lg-4">
+                            <img src="img/Bitmap Copy 2.png" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <div class="container">
+                        <div class="row">
+                          <div class="col-lg-4">
+                            <img src="img/Bitmap Copy 2.png" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="col-lg-4">
+                            <img src="img/Bitmap Copy 2.png" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="col-lg-4">
+                            <img src="img/Bitmap Copy 2.png" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <i class="carousel-control-next-icon" aria-hidden="true"></i>
+                    <i class="visually-hidden">Next</i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         <section class="work text-center container">
           <h2>Our Work</h2>
