fix services pages

--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
       </section>
 
       <!-- ======= Services======= -->
-      <section id="services">
-        <section class="valuable-services text-center">
-          <h2>Our Valuable Services</h2>
-          <span></span>
+        <section id="services" class="valuable-services text-center">
+          <div class="mb-5">
+            <h2>Our Valuable Services</h2>
+            <span></span>
+          </div>
           <div class="container-fluid">
             <div class="row">
               <div class="col-12">
@@ -88,7 +89,7 @@
                           <div class="col-lg-4">
                             <div class="card second">
                               <div class="card-body">
-                                <img src="img/Bitmap1.png" class="d-block w-100" alt="...">
+                                <img src="img/Bitmap2.png" class="d-block w-100" alt="...">
                                 <h6>Web Development</h6>
                                 <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <a href="#">READ MORE</a>
@@ -98,7 +99,7 @@
                           <div class="col-lg-4">
                             <div class="card third">
                               <div class="card-body">
-                                <img src="img/Bitmap1.png" class="d-block w-100" alt="...">
+                                <img src="img/Bitmap3.png" class="d-block w-100" alt="...">
                                 <h6>UI UX Design</h6>
                                 <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 <a href="#">READ MORE</a>
@@ -146,21 +147,26 @@
                     </div>
                   </div>
                   <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                    <i class="carousel-control-next-icon" aria-hidden="true"></i>
-                    <i class="visually-hidden">Next</i>
+                    <div class="next">
+                      <i class="carousel-control-next-icon" aria-hidden="true"></i>
+                      <i class="visually-hidden">Next</i>
+                    </div>
                   </button>
                 </div>
               </div>
             </div>
           </div>
         </section>
-        <section class="work text-center container">
-          <h2>Our Work</h2>
+
+        <!-- ======= Work ======= -->
+        <section id="work" class="work text-center">
+          <div class="container">
+            <h2 class="text-white">Our Work</h2>
           <span></span>
           <div class="row row-cols-1 text-white mt-5">
             <div class="col row my-4">
-              <div class="col"><img src="img/Bitmap.png" alt="" class="img-fluid" /></div>
-              <div class="col text-start">
+              <div class="col-lg"><img src="img/Bitmap.png" alt="" class="img-fluid" /></div>
+              <div class="col-lg text-start">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -169,8 +175,8 @@
                 </p>
               </div>
             </div>
-            <div class="col row my-4">
-              <div class="col text-end">
+            <div class="col-lg row my-4">
+              <div class="col-lg text-end">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -178,11 +184,11 @@
                   consequat.
                 </p>
               </div>
-              <div class="col"><img src="img/Bitmap Copy.png" alt="" class="img-fluid" /></div>
+              <div class="col-lg"><img src="img/Bitmap Copy.png" alt="" class="img-fluid" /></div>
             </div>
             <div class="col row my-4">
-              <div class="col"><img src="img/Bitmap Copy 2.png" alt="" class="img-fluid" /></div>
-              <div class="col text-start">
+              <div class="col-lg"><img src="img/Bitmap Copy 2.png" alt="" class="img-fluid" /></div>
+              <div class="col-lg text-start">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -191,8 +197,8 @@
                 </p>
               </div>
             </div>
-            <div class="col row my-4">
-              <div class="col text-end">
+            <div class="col-lg row my-4">
+              <div class="col-lg text-end">
                 <h4>Brand Name</h4>
                 <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
@@ -200,12 +206,12 @@
                   consequat.
                 </p>
               </div>
-              <div class="col"><img src="img/Bitmap Copy 3.png" alt="" class="img-fluid" /></div>
+              <div class="col-lg"><img src="img/Bitmap Copy 3.png" alt="" class="img-fluid" /></div>
             </div>
           </div>
           <a class="my-4" href="">SEE ALL WORK</a>
+          </div>
         </section>
-      </section>
 
       <!-- ======= Contact Us======= -->
       <section class="contact-us">
