fixed grid system

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ======= Header ======= -->
     <header>
       <nav class="navbar navbar-expand-lg fixed-top bg-white shadow-sm py-0">
-        <div class="container">
+        <div class="container my-3">
           <div class="navbar-brand">
             <a class="brand" href="#"><img class="d-flex" src="img/Combined Shape.png" alt="duck" /></a>
           </div>
@@ -22,12 +22,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
+            <div class="navbar-nav ms-auto text-center">
               <a class="nav-link" href="#">Home</a>
               <a class="nav-link" href="#">About</a>
               <a class="nav-link" href="#">Services</a>
               <a class="nav-link" href="#">Portfolio</a>
-              <a class="nav-link contact-us" href="#">Contact Us</a>
+              <a class="nav-link contact-usr" href="#">Contact Us</a>
             </div>
           </div>
         </div>
@@ -37,11 +37,11 @@
     <main>
       <section id="hero" class="container mt-5">
         <div class="row">
-          <div class="col mt-4 pt-5">
+          <div class="col-md mt-4 pt-5">
             <h1>We Create Content that ranks</h1>
             <a class="" href="">SEE OUR WORK</a>
           </div>
-          <div class="col">
+          <div class="col-md">
             <img src="img/Group.png" class="img-fluid" alt="hero-img" />
           </div>
         </div>
@@ -217,18 +217,18 @@
       <section class="contact-us">
         <div class="container my-5 py-5">
           <div class="container-fluid row">
-            <div class="col">
+            <div class="col-md">
               <h2 class="text-1">Questions, Comments, Concerns?</h2>
               <h1 class="text-2">We’d love to <span class="custom">hear</span> from you!</h1>
             </div>
-            <div class="col">
+            <div class="col-md">
               <form action="https://formspree.io/f/xzbwlrgv" method="POST">
                 <label for="email" class="d-block">Your Email Address</label>
-                <input type="email" name="email" class="custom" /><br />
+                <input type="email" placeholder="something@website.com" name="email" class="custom ps-3" /><br />
                 <label for="subject" class="d-block">Subject</label>
-                <input type="text" name="subject" class="custom" /><br />
+                <input type="text" placeholder="Question about your article" name="subject" class="custom ps-3" /><br />
                 <label for="message" class="d-block">Message</label>
-                <textarea type="text" name="message" rows="5" class="custom area"></textarea>
+                <textarea type="text" placeholder="Your message starts with…" name="message" rows="5" class="custom area ps-3"></textarea>
                 <button type="submit" class="custom-btn">Send a Message</button>
               </form>
             </div>
