--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section id="about">
         <div class="row justify-content-center">
           <img src="img/Oval.png" class="position-absolute" alt="half-circle" />
-          <div class="col-8 text-center">
+          <div class="col-5 text-center">
             <h2>About Us</h2>
             <span></span>
             <p>
@@ -209,7 +209,7 @@
               <div class="col-lg"><img src="img/Bitmap Copy 3.png" alt="" class="img-fluid" /></div>
             </div>
           </div>
-          <a class="my-4" href="">SEE ALL WORK</a>
+          <a class="my-4 mb-5" href="">SEE ALL WORK</a>
           </div>
         </section>
 
