update pada responsive brand

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
           <div class="navbar-brand">
             <a class="brand" href="#"><img class="d-flex" src="img/Combined Shape.png" alt="duck" /></a>
           </div>
+
+          <div class="nav-brand">
+            <a class="n-brand" href="#"><img class="d-flex" src="img/Combined Shape.png" alt="duck" /></a>
+          </div>
           <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
