update responsive pada img about

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
       <!-- ======= About====== -->
       <section id="about">
-        <div class="row justify-content-center">
-          <img src="img/Oval.png" class="position-absolute" alt="half-circle" />
+        <div class="row justify-content-center position-relative">
+          <img src="img/Oval.png" class="position-absolute top-50 start-0 translate-middle-y" alt="half-circle" />
           <div class="col-5 text-center">
             <h2>About Us</h2>
             <span></span>
@@ -171,8 +171,8 @@
             <div class="col row my-4">
               <div class="col-lg"><img src="img/Bitmap.png" alt="" class="img-fluid mb-5 mb-lg-0" /></div>
               <div class="col-lg text-lg-start text-center">
-                <h4>Brand Name</h4>
-                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <h4 class="">Brand Name</h4>
+                <p class="custom mb-lg-5">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat.
@@ -181,8 +181,8 @@
             </div>
             <div class="col-lg row my-4 d-flex flex-column-reverse flex-lg-row">
               <div class="col-lg text-lg-end text-center">
-                <h4>Brand Name</h4>
-                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <h4 class="">Brand Name</h4>
+                <p class="custom mb-lg-5">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat.
@@ -193,8 +193,8 @@
             <div class="col row my-4">
               <div class="col-lg"><img src="img/Bitmap Copy 2.png" alt="" class="img-fluid mb-5 mb-lg-0" /></div>
               <div class="col-lg text-lg-start text-center">
-                <h4>Brand Name</h4>
-                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <h4 class="">Brand Name</h4>
+                <p class="custom mb-lg-5">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat.
@@ -203,8 +203,8 @@
             </div>
             <div class="col-lg row my-4 d-flex flex-column-reverse flex-lg-row">
               <div class="col-lg text-lg-end text-center">
-                <h4>Brand Name</h4>
-                <p class="custom">iOS | ANDROID | WEB DEVELOPMENT</p>
+                <h4 class="">Brand Name</h4>
+                <p class="custom mb-lg-5">iOS | ANDROID | WEB DEVELOPMENT</p>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat.
