update responsive untuk font

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section id="about">
         <div class="row justify-content-center position-relative">
           <img src="img/Oval.png" class="position-absolute top-50 start-0 translate-middle-y" alt="half-circle" />
-          <div class="col-5 text-center">
+          <div class="col-lg-5 col-md-6 text-center">
             <h2>About Us</h2>
             <span></span>
             <p>
