--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h2>Our Valuable Services</h2>
           <span></span>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid d-none d-lg-block">
           <div class="row">
             <div class="col-12">
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -151,6 +151,70 @@
                   </div>
                 </div>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <div class="next">
+                    <i class="carousel-control-next-icon" aria-hidden="true"></i>
+                    <i class="visually-hidden">Next</i>
+                  </div>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid d-block d-lg-none">
+          <div class="row">
+            <div class="col-12">
+              <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-4">
+                          <div class="card first">
+                            <div class="card-body">
+                              <img src="img/Bitmap1.png" class="d-block w-100" alt="..." />
+                              <h6>App Development</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-4">
+                          <div class="card second">
+                            <div class="card-body">
+                              <img src="img/Bitmap2.png" class="d-block w-100" alt="..." />
+                              <h6>Web Development</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-4">
+                          <div class="card third">
+                            <div class="card-body">
+                              <img src="img/Bitmap3.png" class="d-block w-100" alt="..." />
+                              <h6>UI UX Design</h6>
+                              <p class="py-3 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <a href="#">READ MORE</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                   <div class="next">
                     <i class="carousel-control-next-icon" aria-hidden="true"></i>
                     <i class="visually-hidden">Next</i>
